Fix footer formatting in watermark-pdf.html

--- a/watermark-pdf.html
+++ b/watermark-pdf.html
@@ -805,8 +805,9 @@
                 <a href="terms-of-service.html">Terms of Service</a>
                 <a href="dmca-en.html">DMCA</a>
                 <a href="blog.html">Blog</a>
-            <a href="sitemap.xml">Sitemap</a>
-                <a href="feedback.html">Feedback</a></div>
+                <a href="sitemap.xml">Sitemap</a>
+                <a href="feedback.html">Feedback</a>
+            </div>
             <p class="footer-brand-line">&copy; easyjpgtopdf &mdash; Free PDF &amp; Image Tools for everyone. All rights reserved.</p>
             <p class="footer-credits">
                 Thanks to every open-source contributor powering this site. <a href="attributions.html">See full acknowledgements</a>.
