Update attributions page: Remove unused libraries (Docx.js, FileSaver.js, ONNX Runtime), add Bootstrap, update pdf.js versions, reorganize sections

--- a/attributions.html
+++ b/attributions.html
@@ -91,7 +91,7 @@
 <div class="card">
 <h1>Attributions - Online Free Tool</h1>
 <p>easyjpgtopdf is proudly built on top of generous open-source communities, free CDNs, and talented creators offering their work for everyone to use.</p>
-<h2>Upload File</h2>
+<h2 style="margin-top:18px;color:var(--primary);">Icons &amp; Fonts</h2>
 <ul class="license-list">
 <li><strong>Font Awesome Free 6.4.0</strong> â CC BY 4.0 (icons) &amp; MIT (code). <a href="https://fontawesome.com" rel="noopener" target="_blank">fontawesome.com</a></li>
 <li><strong>Google Fonts</strong> (Inter, Poppins, Montserrat, Noto Sans families and more) â SIL Open Font License. <a href="https://fonts.google.com" rel="noopener" target="_blank">fonts.google.com</a></li>
