Complete attributions page update: Remove unused libraries (Docx.js, FileSaver.js, ONNX Runtime), add Bootstrap, update pdf.js and Firebase versions

--- a/attributions.html
+++ b/attributions.html
@@ -102,19 +102,20 @@
 <li><strong>jsPDF-AutoTable 3.5.28</strong> â MIT. <a href="https://github.com/simonbengtsson/jsPDF-AutoTable" rel="noopener" target="_blank">github.com/simonbengtsson/jsPDF-AutoTable</a></li>
 <li><strong>jsPDF Custom Fonts Support 1.0.2</strong> â MIT. <a href="https://github.com/MrRio/jsPDF-CustomFonts-support" rel="noopener" target="_blank">github.com/MrRio/jsPDF-CustomFonts-support</a></li>
 <li><strong>Mammoth.js 1.6.0</strong> â BSD-2-Clause. <a href="https://github.com/mwilliamson/mammoth.js" rel="noopener" target="_blank">github.com/mwilliamson/mammoth.js</a></li>
-<li><strong>Docx.js 8.5.0</strong> â MIT. <a href="https://github.com/dolanmiu/docx" rel="noopener" target="_blank">github.com/dolanmiu/docx</a></li>
-<li><strong>FileSaver.js 2.0.5</strong> â MIT. <a href="https://github.com/eligrey/FileSaver.js" rel="noopener" target="_blank">github.com/eligrey/FileSaver.js</a></li>
 <li><strong>JSZip 3.10.1</strong> â MIT. <a href="https://stuk.github.io/jszip/" rel="noopener" target="_blank">stuk.github.io/jszip</a></li>
-<li><strong>pdf.js / pdfjs-dist 3.11.174</strong> â Apache 2.0. <a href="https://github.com/mozilla/pdf.js" rel="noopener" target="_blank">github.com/mozilla/pdf.js</a></li>
+<li><strong>pdf.js / pdfjs-dist</strong> (2.16.105 &amp; 3.11.174) â Apache 2.0. <a href="https://github.com/mozilla/pdf.js" rel="noopener" target="_blank">github.com/mozilla/pdf.js</a></li>
 <li><strong>pdf-lib 1.17.1</strong> â MIT. <a href="https://github.com/Hopding/pdf-lib" rel="noopener" target="_blank">github.com/Hopding/pdf-lib</a></li>
 <li><strong>html2canvas 1.4.1</strong> â MIT. <a href="https://github.com/niklasvh/html2canvas" rel="noopener" target="_blank">github.com/niklasvh/html2canvas</a></li>
 </ul>
 <h2 style="margin-top:18px;color:var(--primary);">AI, Vision &amp; Utilities</h2>
 <ul class="license-list">
 <li><strong>Tesseract.js</strong> (v4 &amp; 5 builds) â Apache 2.0. <a href="https://github.com/naptha/tesseract.js" rel="noopener" target="_blank">github.com/naptha/tesseract.js</a></li>
-<li><strong>ONNX Runtime Web 1.21.0</strong> â MIT. <a href="https://github.com/microsoft/onnxruntime" rel="noopener" target="_blank">github.com/microsoft/onnxruntime</a></li>
 <li><strong>IMG.LY Background Removal</strong> (background-removal JS 1.7.0 &amp; data) â MIT. <a href="https://github.com/imgly/background-removal-js" rel="noopener" target="_blank">github.com/imgly/background-removal-js</a></li>
-<li><strong>Firebase Web SDK</strong> (app &amp; firestore modules) â Apache 2.0. <a href="https://firebase.google.com" rel="noopener" target="_blank">firebase.google.com</a></li>
+<li><strong>Firebase Web SDK</strong> (app &amp; firestore modules, v10.14.0) â Apache 2.0. <a href="https://firebase.google.com" rel="noopener" target="_blank">firebase.google.com</a></li>
+</ul>
+<h2 style="margin-top:18px;color:var(--primary);">UI Frameworks &amp; Libraries</h2>
+<ul class="license-list">
+<li><strong>Bootstrap 5.1.3</strong> — MIT. <a href="https://getbootstrap.com" rel="noopener" target="_blank">getbootstrap.com</a></li>
 </ul>
 <h2 style="margin-top:18px;color:var(--primary);">Media &amp; Creative Assets</h2>
 <ul class="license-list">
