Complete PDF output format: Add jsPDF library and fix PDF conversion/download functionality

--- a/image-compressor.html
+++ b/image-compressor.html
@@ -10,6 +10,7 @@
     <link rel="canonical" href="https://easyjpgtopdf.com/image-compressor.html">
     <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     /* Page base to align with index */
     *{box-sizing:border-box}
