--- a/image-compressor.html
+++ b/image-compressor.html
@@ -150,6 +150,17 @@
                 <div style="color:#64748b;font-size:.85rem;margin-top:4px">Lower = smaller size • Higher = better quality</div>
               </div>
               <div class="settings-group">
+                <h3>Target Size (Optional)</h3>
+                <div style="display: flex; gap: 10px; align-items: center; margin-top: 8px;">
+                  <input type="number" id="ic-target-size" placeholder="Enter size" min="0.1" step="0.1" style="flex: 1; padding: 8px 12px; border: 1px solid #ddd; border-radius: 8px; font-size: 0.9rem;">
+                  <select id="ic-size-unit" style="padding: 8px 12px; border: 1px solid #ddd; border-radius: 8px; font-size: 0.9rem;">
+                    <option value="KB">KB</option>
+                    <option value="MB">MB</option>
+                  </select>
+                </div>
+                <div style="color:#64748b;font-size:.85rem;margin-top:4px">Set target size to compress image to specific file size</div>
+              </div>
+              <div class="settings-group">
                 <h3>Output Format</h3>
                 <div class="format-options" id="ic-formats">
                   <button class="btn active" data-format="jpeg" style="border:1px solid #ddd; background: #4361ee; color: white;">JPG</button>
