--- a/disclaimer.html
+++ b/disclaimer.html
@@ -156,7 +156,7 @@
                 <h2>9. Contact Information</h2>
                 <p>If you have any questions about this Disclaimer, please contact us at:</p>
                 <ul>
-                    <li>Email: support@easyjpgtopdf.com</li>
+                    <li>Email: easyjpgtopdf@gmail.com</li>
                     <li>Website: <a href="contact.html" style="color: #4361ee;">Contact Us</a></li>
                 </ul>
                 
