--- a/kyc-support.html
+++ b/kyc-support.html
@@ -203,7 +203,7 @@
 <li>Update <strong>Business Website</strong> with <code>https://easyjpgtopdf.com</code> and keep the shipping/refund pages live.</li>
 <li>Enter <strong>Business Model</strong> as self-developed digital services.</li>
 <li>Upload PAN, address proof, and bank proof. Ensure scans are clear and under 5 MB.</li>
-<li>Provide customer support details: support@easyjpgtopdf.com and +91-00000-00000.</li>
+<li>Provide customer support details: easyjpgtopdf@gmail.com and +91-00000-00000.</li>
 <li>Submit and track status under <em>Settings â Account &amp; KYC</em>. Razorpay typically reviews within 24â48 hours.</li>
 </ul>
 </section>
@@ -221,8 +221,8 @@
 <h2>Need Assistance?</h2>
 <p>Email us for help with document preparation or to request sample invoices.</p>
 <div class="cta-panel">
-<span><i class="fas fa-envelope"></i> support@easyjpgtopdf.com</span>
-<a href="mailto:support@easyjpgtopdf.com"><i class="fas fa-paper-plane"></i> Send KYC Query</a>
+<span><i class="fas fa-envelope"></i> easyjpgtopdf@gmail.com</span>
+<a href="mailto:easyjpgtopdf@gmail.com"><i class="fas fa-paper-plane"></i> Send KYC Query</a>
 </div>
 </section>
 
