--- a/pricing.html
+++ b/pricing.html
@@ -564,7 +564,7 @@
               contactSection.scrollIntoView({ behavior: 'smooth' });
             } else {
               // Show contact modal or redirect
-              alert('Please contact our sales team for Business plan pricing. Email: sales@easyjpgtopdf.com');
+              alert('Please contact our sales team for Business plan pricing. Email: easyjpgtopdf@gmail.com');
             }
             return;
           }
