--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -256,7 +256,7 @@
 <ul class="checklist">
 <li>You can request deletion of any support correspondence by contacting us.</li>
 <li>You can disable cookies in your browser; however, some features may not function correctly.</li>
-<li>If you are located in a region with specific privacy laws (GDPR, CCPA, etc.), you may exercise your rights by emailing <a href="mailto:privacy@easyjpgtopdf.com">privacy@easyjpgtopdf.com</a>.</li>
+<li>If you are located in a region with specific privacy laws (GDPR, CCPA, etc.), you may exercise your rights by emailing <a href="mailto:easyjpgtopdf@gmail.com">easyjpgtopdf@gmail.com</a>.</li>
 </ul>
 </section>
 <section class="policy-section">
