--- a/refund-policy.html
+++ b/refund-policy.html
@@ -181,7 +181,7 @@
 <section class="policy-section">
 <h2>How to Request a Refund</h2>
 <ol class="policy-list">
-<li>Send an email to <a href="mailto:support@easyjpgtopdf.com">support@easyjpgtopdf.com</a> with the payment reference, registered email, and reason for refund.</li>
+<li>Send an email to <a href="mailto:easyjpgtopdf@gmail.com">easyjpgtopdf@gmail.com</a> with the payment reference, registered email, and reason for refund.</li>
 <li>Attach any supporting screenshots (payment receipt, bank SMS, or error messages).</li>
 <li>Our support team will verify the transaction in Firestore logs and payment gateway dashboard.</li>
 </ol>
@@ -202,7 +202,7 @@
 <div class="contact-card">
 <div>
 <strong>Email:</strong>
-<p><a href="mailto:support@easyjpgtopdf.com">support@easyjpgtopdf.com</a></p>
+<p><a href="mailto:easyjpgtopdf@gmail.com">easyjpgtopdf@gmail.com</a></p>
 </div>
 <div>
 <strong>Phone / WhatsApp:</strong>
