--- a/server/public/dashboard.html
+++ b/server/public/dashboard.html
@@ -890,10 +890,10 @@
                                     </li>
                                     <li class="cancellation-item">
                                         <strong>Raise refund requests within 7 days</strong>
-                                        Email support@easyjpgtopdf.com with payment reference and reason for faster resolution.
+                                        Email easyjpgtopdf@gmail.com with payment reference and reason for faster resolution.
                                     </li>
                                 </ul>
-                                <a class="inline-link-btn" href="mailto:support@easyjpgtopdf.com">
+                                <a class="inline-link-btn" href="mailto:easyjpgtopdf@gmail.com">
                                     <i class="fas fa-headset"></i>
                                     Contact support desk
                                 </a>
@@ -919,12 +919,12 @@
                                         <i class="fas fa-life-ring"></i>
                                         <div>
                                             <strong>Need Assistance?</strong>
-                                            Reach our support team within 24 hours for billing disputes or urgent refunds. We reply from support@easyjpgtopdf.com.
+                                            Reach our support team within 24 hours for billing disputes or urgent refunds. We reply from easyjpgtopdf@gmail.com.
                                         </div>
                                     </li>
                                 </ul>
                                 <div class="notification-help-links">
-                                    <a href="mailto:support@easyjpgtopdf.com">
+                                    <a href="mailto:easyjpgtopdf@gmail.com">
                                         <i class="fas Ã Â¦Â¹Ã Â¦Â¿Ã Â¦Å¡"></i>
                                         Contact Support
                                     </a>
