--- a/shipping-billing.html
+++ b/shipping-billing.html
@@ -180,7 +180,7 @@
 <div>
 <p class="info-line"><span class="info-label">Business Name:</span> easyjpgtopdf</p>
 <p class="info-line"><span class="info-label">Phone:</span> +91-00000-00000</p>
-<p class="info-line"><span class="info-label">Email:</span> support@easyjpgtopdf.com</p>
+<p class="info-line"><span class="info-label">Email:</span> easyjpgtopdf@gmail.com</p>
 </div>
 <div>
 <p class="info-line"><span class="info-label">Billing Address:</span> 123 Innovation Park, Sector 62, Noida, Uttar Pradesh 201309, India</p>
@@ -210,7 +210,7 @@
 <h2>Support &amp; Complaints</h2>
 <p>If you face any issue with billing or need clarification about delivery timelines, contact our support desk within 48 hours of payment.</p>
 <ul class="standard-list">
-<li>Email: <a href="mailto:support@easyjpgtopdf.com">support@easyjpgtopdf.com</a></li>
+<li>Email: <a href="mailto:easyjpgtopdf@gmail.com">easyjpgtopdf@gmail.com</a></li>
 <li>Phone / WhatsApp: +91-00000-00000 (MonâSat, 10 AM â 6 PM IST)</li>
 <li>Response SLA: within 24 business hours</li>
 </ul>
