--- a/watermark-pdf.html
+++ b/watermark-pdf.html
@@ -433,6 +433,92 @@
             <div class="content-text" style="font-size: 1.1rem; color: #56607a; line-height: 1.8; text-align: center; margin-bottom: 30px;">
                 <p>Our PDF watermark tool allows you to add custom text or image watermarks to your PDF documents online for free. Protect your documents, add branding, or mark them as confidential with professional watermarks. The tool supports customizable text watermarks with adjustable font size, color, opacity, rotation, and position. You can also add logo watermarks for branding purposes. Watermarks can be applied to all pages or just the first page of your PDF. The tool processes files securely in your browser without uploading to servers, ensuring your documents remain private. All watermarking happens instantly with no watermarks on the output file. Perfect for protecting confidential documents, adding company branding, marking drafts, or copyright protection.</p>
             </div>
+
+            <div style="background: white; padding: 30px; border-radius: 12px; margin: 30px 0; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
+                <h3 style="font-size: 1.5rem; color: #4361ee; margin-bottom: 20px; text-align: center;">
+                    <i class="fas fa-star" style="margin-right: 10px;"></i>
+                    What Makes This Tool Special
+                </h3>
+                <ul style="text-align: left; color: #56607a; line-height: 2; padding-left: 20px;">
+                    <li><strong>Dual Watermark Support:</strong> Add both text and image watermarks simultaneously to your PDFs</li>
+                    <li><strong>Advanced Positioning:</strong> Choose from 6 different positions including diagonal center placement</li>
+                    <li><strong>Full Customization:</strong> Control font size (8-200pt), color, opacity (5-100%), and rotation (-180° to 180°)</li>
+                    <li><strong>Selective Application:</strong> Apply watermarks to all pages or just the first page</li>
+                    <li><strong>Logo Watermarking:</strong> Add company logos or custom images with adjustable size and opacity</li>
+                    <li><strong>Browser-Based Processing:</strong> All processing happens in your browser - no server uploads, maximum privacy</li>
+                    <li><strong>Instant Results:</strong> Get your watermarked PDF in seconds without waiting for server processing</li>
+                </ul>
+            </div>
+
+            <div style="background: white; padding: 30px; border-radius: 12px; margin: 30px 0; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
+                <h3 style="font-size: 1.5rem; color: #4361ee; margin-bottom: 20px; text-align: center;">
+                    <i class="fas fa-cogs" style="margin-right: 10px;"></i>
+                    How It Works
+                </h3>
+                <div style="text-align: left; color: #56607a; line-height: 1.8;">
+                    <p style="margin-bottom: 15px;">Our PDF watermark tool uses advanced PDF-lib technology to process your documents directly in your web browser. Here's how it works:</p>
+                    <ol style="padding-left: 25px; line-height: 2;">
+                        <li><strong>Upload:</strong> Drag and drop or select your PDF file (up to 50MB)</li>
+                        <li><strong>Customize:</strong> Enter your watermark text, choose font size, color, opacity, rotation, and position</li>
+                        <li><strong>Optional Logo:</strong> Upload an image file (PNG/JPG) to add as a logo watermark</li>
+                        <li><strong>Select Pages:</strong> Choose to apply watermark to all pages or just the first page</li>
+                        <li><strong>Process:</strong> The tool uses PDF-lib to embed watermarks directly into the PDF structure</li>
+                        <li><strong>Download:</strong> Get your watermarked PDF instantly - no waiting, no server storage</li>
+                    </ol>
+                    <p style="margin-top: 15px; font-style: italic; color: #4361ee;">All processing happens locally in your browser using JavaScript, ensuring your documents never leave your device.</p>
+                </div>
+            </div>
+
+            <div style="background: white; padding: 30px; border-radius: 12px; margin: 30px 0; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
+                <h3 style="font-size: 1.5rem; color: #4361ee; margin-bottom: 20px; text-align: center;">
+                    <i class="fas fa-lightbulb" style="margin-right: 10px;"></i>
+                    Use Cases
+                </h3>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; text-align: left;">
+                    <div style="padding: 15px; background: #f8f9ff; border-radius: 8px;">
+                        <h4 style="color: #4361ee; margin-bottom: 10px;"><i class="fas fa-briefcase" style="margin-right: 8px;"></i>Business Documents</h4>
+                        <p style="color: #56607a; font-size: 0.95rem; margin: 0;">Add company logos to invoices, contracts, and proposals. Mark confidential documents with "CONFIDENTIAL" or "DRAFT" watermarks.</p>
+                    </div>
+                    <div style="padding: 15px; background: #f8f9ff; border-radius: 8px;">
+                        <h4 style="color: #4361ee; margin-bottom: 10px;"><i class="fas fa-graduation-cap" style="margin-right: 8px;"></i>Academic Papers</h4>
+                        <p style="color: #56607a; font-size: 0.95rem; margin: 0;">Protect research papers, theses, and assignments with copyright watermarks. Mark drafts clearly before submission.</p>
+                    </div>
+                    <div style="padding: 15px; background: #f8f9ff; border-radius: 8px;">
+                        <h4 style="color: #4361ee; margin-bottom: 10px;"><i class="fas fa-copyright" style="margin-right: 8px;"></i>Copyright Protection</h4>
+                        <p style="color: #56607a; font-size: 0.95rem; margin: 0;">Add copyright notices, author names, or "DO NOT COPY" watermarks to protect intellectual property.</p>
+                    </div>
+                    <div style="padding: 15px; background: #f8f9ff; border-radius: 8px;">
+                        <h4 style="color: #4361ee; margin-bottom: 10px;"><i class="fas fa-shield-alt" style="margin-right: 8px;"></i>Security & Privacy</h4>
+                        <p style="color: #56607a; font-size: 0.95rem; margin: 0;">Mark sensitive documents with security classifications like "RESTRICTED" or "FOR INTERNAL USE ONLY".</p>
+                    </div>
+                    <div style="padding: 15px; background: #f8f9ff; border-radius: 8px;">
+                        <h4 style="color: #4361ee; margin-bottom: 10px;"><i class="fas fa-palette" style="margin-right: 8px;"></i>Branding</h4>
+                        <p style="color: #56607a; font-size: 0.95rem; margin: 0;">Add company logos or brand names to marketing materials, presentations, and client deliverables.</p>
+                    </div>
+                    <div style="padding: 15px; background: #f8f9ff; border-radius: 8px;">
+                        <h4 style="color: #4361ee; margin-bottom: 10px;"><i class="fas fa-file-alt" style="margin-right: 8px;"></i>Document Status</h4>
+                        <p style="color: #56607a; font-size: 0.95rem; margin: 0;">Mark documents as "DRAFT", "FINAL", "APPROVED", or "PENDING REVIEW" for workflow management.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div style="background: white; padding: 30px; border-radius: 12px; margin: 30px 0; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
+                <h3 style="font-size: 1.5rem; color: #4361ee; margin-bottom: 20px; text-align: center;">
+                    <i class="fas fa-tools" style="margin-right: 10px;"></i>
+                    Related Tools & Functions
+                </h3>
+                <div style="text-align: left; color: #56607a; line-height: 1.8;">
+                    <p style="margin-bottom: 15px;">This tool works seamlessly with other PDF and document processing tools in our suite:</p>
+                    <ul style="padding-left: 25px; line-height: 2;">
+                        <li><strong><a href="protect-pdf.html" style="color: #4361ee; text-decoration: none;">Protect PDF:</a></strong> Add password protection and encryption after watermarking</li>
+                        <li><strong><a href="merge-pdf.html" style="color: #4361ee; text-decoration: none;">Merge PDF:</a></strong> Combine multiple watermarked PDFs into one document</li>
+                        <li><strong><a href="compress-pdf.html" style="color: #4361ee; text-decoration: none;">Compress PDF:</a></strong> Reduce file size of watermarked PDFs for easier sharing</li>
+                        <li><strong><a href="image-watermark.html" style="color: #4361ee; text-decoration: none;">Image Watermark:</a></strong> Add watermarks to images before converting to PDF</li>
+                        <li><strong><a href="edit-pdf.html" style="color: #4361ee; text-decoration: none;">Edit PDF:</a></strong> Make additional edits to your watermarked documents</li>
+                        <li><strong><a href="split-pdf.html" style="color: #4361ee; text-decoration: none;">Split PDF:</a></strong> Divide watermarked PDFs into separate files</li>
+                    </ul>
+                </div>
+            </div>
             
             <div class="features-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px;">
                 <div class="feature-item" style="padding: 20px; background: white; border-radius: 12px; text-align: center; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
@@ -452,6 +538,14 @@
                     <h3 style="font-size: 1.2rem; color: #0b1630; margin-bottom: 10px;">Fully Customizable</h3>
                     <p style="color: #56607a; font-size: 0.95rem;">Text and image watermarks with full control over appearance</p>
                 </div>
+            </div>
+
+            <div style="text-align: center; margin-top: 30px; padding-top: 30px; border-top: 2px solid #e2e6ff;">
+                <a href="blog-how-to-watermark-pdf.html" style="display: inline-flex; align-items: center; gap: 10px; color: #4361ee; text-decoration: none; font-weight: 600; font-size: 1.1rem; padding: 12px 24px; background: white; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: all 0.3s;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(67, 97, 238, 0.2)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 8px rgba(0,0,0,0.1)'">
+                    <i class="fas fa-book-reader"></i>
+                    Read More - Complete Guide to Watermarking PDFs
+                    <i class="fas fa-arrow-right"></i>
+                </a>
             </div>
         </div>
     </section>
@@ -492,6 +586,44 @@
                 </li>
 
             </ol>
+        </div>
+    </section>
+
+    <section class="related-tools" style="margin: 40px 0; padding: 40px; background: white; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 30px; text-align: center;">
+            <i class="fas fa-tools" style="margin-right: 10px;"></i>
+            Related Tools
+        </h2>
+        <div class="tools-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px;">
+
+            <a href="protect-pdf.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
+               onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 16px rgba(67,97,238,0.2)'; this.style.borderColor='#4361ee';"
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'; this.style.borderColor='transparent';">
+                <i class="fas fa-shield-alt" style="font-size: 2rem; color: #4361ee; margin-bottom: 10px;"></i>
+                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Protect PDF</h3>
+            </a>
+
+            <a href="merge-pdf.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
+               onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 16px rgba(67,97,238,0.2)'; this.style.borderColor='#4361ee';"
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'; this.style.borderColor='transparent';">
+                <i class="fas fa-file-alt" style="font-size: 2rem; color: #4361ee; margin-bottom: 10px;"></i>
+                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Merge PDF</h3>
+            </a>
+
+            <a href="image-watermark.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
+               onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 16px rgba(67,97,238,0.2)'; this.style.borderColor='#4361ee';"
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'; this.style.borderColor='transparent';">
+                <i class="fas fa-image" style="font-size: 2rem; color: #4361ee; margin-bottom: 10px;"></i>
+                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Image Watermark</h3>
+            </a>
+
+            <a href="compress-pdf.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
+               onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 16px rgba(67,97,238,0.2)'; this.style.borderColor='#4361ee';"
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'; this.style.borderColor='transparent';">
+                <i class="fas fa-compress" style="font-size: 2rem; color: #4361ee; margin-bottom: 10px;"></i>
+                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Compress PDF</h3>
+            </a>
+
         </div>
     </section>
 
