CRITICAL FIX: Remove orphaned code block (lines 3036-3141) causing Illegal return statement error

--- a/pdf-editor-preview.html
+++ b/pdf-editor-preview.html
@@ -3033,8 +3033,8 @@ SSL Security & Trust Section -->
                 return Promise.resolve(false);
             }
         }
-            try {
-                let { pageIndex, oldText, newText, x, y, fontSize, fontName, fontColor } = editData;
+        
+        // Check for PDF from edit-pdf.html on page load
                 
                 // Use font properties from properties panel if not provided
                 if (!fontSize && fontSizeInput) {
