fix: Add missing event listener for text canvas click handler

--- a/pdf-editor-preview.html
+++ b/pdf-editor-preview.html
@@ -2384,6 +2384,10 @@ SSL Security & Trust Section -->
                     console.log('Click not on any text item');
                 }
             }
+            
+            // Add click handler for text editing
+            textCanvas.addEventListener('click', handleTextCanvasClick);
+            console.log('✅ Text canvas click handler attached');
         }
         
         // Keyboard shortcuts for search
