Add SEO-friendly H1 tags to all pages missing H1 and meta description to test-backend-connection.html

--- a/image-editor-result.html
+++ b/image-editor-result.html
@@ -86,6 +86,13 @@
         </div>
     </nav>
 
+<section class="hero" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); color: #fff; padding: 40px 0; text-align: center; margin-bottom: 24px;">
+<div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+<h1 style="font-size: 2.5rem; margin-bottom: 12px; font-weight: 700;">Image Editor Result - Your Edited Image is Ready</h1>
+<p style="font-size: 1.1rem; opacity: 0.95;">Download your edited image instantly. Share, print, or save your professionally edited photo.</p>
+</div>
+</section>
+
 <main class="container">
 <div class="card">
 <div class="row"><h2>Upload File</h2><div class="actions"><a class="btn" id="downloadBtn"><i class="fas fa-download"></i> Download</a></div></div>
