--- a/test-backend-connection.html
+++ b/test-backend-connection.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Backend Connection Test</title>
+    <meta name="description" content="Test backend connection and API status. Verify server connectivity and service availability for easyjpgtopdf tools.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body { font-family: Arial; padding: 20px; }
         .status { padding: 10px; margin: 10px 0; border-radius: 5px; }
