--- a/Indian-style-Resume-generator.html
+++ b/Indian-style-Resume-generator.html
@@ -182,6 +182,13 @@ th{font-weight:700;background:linear-gradient(90deg,#fff7e6,#fff3d6)}
         </div>
     </nav>
 
+<section class="hero" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); color: #fff; padding: 40px 0; text-align: center; margin-bottom: 24px;">
+<div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+<h1 style="font-size: 2.5rem; margin-bottom: 12px; font-weight: 700;">Indian Style Resume Generator - Create Professional Resume Online Free</h1>
+<p style="font-size: 1.1rem; opacity: 0.95;">Build your perfect resume with our free Indian style resume generator. Professional templates, easy to use, download instantly.</p>
+</div>
+</section>
+
   <div class="topbar">
     <div class="brand">Indian Resume Maker — Final</div>
     <div style="margin-left:12px"><button id="themeToggle" class="ghost">Toggle Dark</button></div>
