--- a/image-repair-editor.html
+++ b/image-repair-editor.html
@@ -672,6 +672,13 @@
         </div>
     </nav>
 
+<section class="hero" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); color: #fff; padding: 40px 0; text-align: center; margin-bottom: 24px; position: relative; z-index: 1;">
+<div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+<h1 style="font-size: 2.5rem; margin-bottom: 12px; font-weight: 700;">Image Repair Editor - Fix and Restore Your Photos Online</h1>
+<p style="font-size: 1.1rem; opacity: 0.95;">Professional image repair and restoration tool. Fix damaged photos, remove scratches, and restore old images.</p>
+</div>
+</section>
+
     <!-- HEADER WILL BE INSERTED HERE -->
     <div id="header-placeholder"></div>
 
