--- a/image-repair.html
+++ b/image-repair.html
@@ -1166,6 +1166,13 @@
         </div>
     </nav>
 
+<section class="hero" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); color: #fff; padding: 40px 0; text-align: center; margin-bottom: 24px;">
+<div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+<h1 style="font-size: 2.5rem; margin-bottom: 12px; font-weight: 700;">Image Repair Tool - Fix Damaged Photos Online Free</h1>
+<p style="font-size: 1.1rem; opacity: 0.95;">Restore and repair damaged, corrupted, or broken images online. Fix scratches, remove artifacts, and enhance photo quality.</p>
+</div>
+</section>
+
     <div class="container">
         <!-- Upload Section -->
         <div class="section-title">
