--- a/kyc-support.html
+++ b/kyc-support.html
@@ -175,6 +175,13 @@
         </div>
     </nav>
 
+<section class="hero" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); color: #fff; padding: 40px 0; text-align: center; margin-bottom: 24px;">
+<div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+<h1 style="font-size: 2.5rem; margin-bottom: 12px; font-weight: 700;">KYC Support - Know Your Customer Verification Help</h1>
+<p style="font-size: 1.1rem; opacity: 0.95;">Get help with KYC verification. Complete guide to verify your identity and complete KYC process online.</p>
+</div>
+</section>
+
 <main>
 <section class="section-card">
 <h2>Upload File</h2>
