--- a/online_resume_maker.html
+++ b/online_resume_maker.html
@@ -142,6 +142,13 @@
 </head>
 <body>
     <div id="global-header-placeholder"></div>
+
+<section class="hero" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); color: #fff; padding: 40px 0; text-align: center; margin-bottom: 24px;">
+<div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+<h1 style="font-size: 2.5rem; margin-bottom: 12px; font-weight: 700;">Online Resume Maker - Create Professional Resume & CV Free</h1>
+<p style="font-size: 1.1rem; opacity: 0.95;">Build your perfect resume online with 20+ professional templates. Free resume builder with instant download.</p>
+</div>
+</section>
 <!-- Header -->
 
 
