--- a/result.html
+++ b/result.html
@@ -108,6 +108,14 @@
             </ol>
         </div>
     </nav>
+
+<section class="hero" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); color: #fff; padding: 40px 0; text-align: center; margin-bottom: 24px;">
+<div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+<h1 style="font-size: 2.5rem; margin-bottom: 12px; font-weight: 700;">Conversion Result - Download Your Converted File</h1>
+<p style="font-size: 1.1rem; opacity: 0.95;">Your file has been converted successfully. Download your converted file instantly.</p>
+</div>
+</section>
+
 <div class="container">
 <div class="tool-page">
 <div class="title">Conversion Result</div>
