--- a/shipping-billing.html
+++ b/shipping-billing.html
@@ -173,6 +173,13 @@
         </div>
     </nav>
 
+<section class="hero" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); color: #fff; padding: 40px 0; text-align: center; margin-bottom: 24px;">
+<div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
+<h1 style="font-size: 2.5rem; margin-bottom: 12px; font-weight: 700;">Shipping & Billing Information - Update Your Details</h1>
+<p style="font-size: 1.1rem; opacity: 0.95;">Manage your shipping address and billing information. Update your details for faster checkout.</p>
+</div>
+</section>
+
 <main>
 <section class="policy-card">
 <h2>Upload File</h2>
