Fix critical syntax error: add missing try block in loadPdf - syntax error resolved

--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -1144,12 +1144,14 @@ ssLabel">Preparingâ¦</span>
       }
 
       async function loadPdf(file){
-        setProgress(5, 'Loading PDFâ¦');
+        console.log('loadPdf called with file:', file.name);
+        try {
+          setProgress(5, 'Loading PDFâ¦');
           const arrayBuffer = await file.arrayBuffer();
           pdfBytes = arrayBuffer;
           console.log('PDF loaded, parsing document...');
           pdfDoc = await pdfjsLib.getDocument({ data: arrayBuffer }).promise;
-        setProgress(30, 'Rendering previewâ¦');
+          setProgress(30, 'Rendering previewâ¦');
           await renderPreview();
           await renderThumbnails();
           updateBadges();
@@ -1164,6 +1166,7 @@ ssLabel">Preparingâ¦</span>
           console.error('Error in loadPdf:', error);
           throw error;
         }
+      }
       }
 
       function getPagesForOcr(){
