Fix broken progressLabel ID: consolidate split HTML attribute

--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -353,14 +353,9 @@
 </div>
 </div>
 <div id="progressWrapper" style="margin-top:20px; display:none;">
-<div style="display:flex;justify-content:space-between;font-size:0.9rem;color:var(--muted);margin-bottom:6px;">
-<span id="progre
-    
-ssLabel">Preparingâ¦</span>
+<span id="progressLabel">Preparingâ¦</span>
 <span id="progressPercent">0%</span>
-</div>
 <div class="progress"><span id="progressBar"></span></div>
-</div>
 <div class="preview-area">
 <div class="preview-frame">
 <canvas aria-hidden="true" class="preview-canvas" height="0" id="previewCanvas"></canvas>
