Fix progressWrapper HTML structure: restore proper wrapper div

--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -353,8 +353,10 @@
 </div>
 </div>
 <div id="progressWrapper" style="margin-top:20px; display:none;">
+<div style="display:flex;justify-content:space-between;font-size:0.9rem;color:var(--muted);margin-bottom:6px;">
 <span id="progressLabel">Preparingâ¦</span>
 <span id="progressPercent">0%</span>
+</div>
 <div class="progress"><span id="progressBar"></span></div>
 <div class="preview-area">
 <div class="preview-frame">
