Add missing closing div tag for progressWrapper

--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -358,6 +358,7 @@
 <span id="progressPercent">0%</span>
 </div>
 <div class="progress"><span id="progressBar"></span></div>
+</div>
 <div class="preview-area">
 <div class="preview-frame">
 <canvas aria-hidden="true" class="preview-canvas" height="0" id="previewCanvas"></canvas>
