Fix background-style.html structure: Add proper hero section with H1, fix breadcrumb link, add meta author tag, ensure proper page structure matching other pages

--- a/background-style.html
+++ b/background-style.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="background-style, background style, free background-style, online background-style">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://easyjpgtopdf.com/background-style.html">
+    <meta name="author" content="easyjpgtopdf">
     <meta property="og:title" content="Background Style Editor - Change Image Background Colors & Styles">
     <meta property="og:description" content="Change background style and colors of images. Edit image backgrounds with custom colors and styles.">
     <meta property="og:type" content="website">
@@ -170,7 +171,7 @@
         <nav aria-label="Breadcrumb" style="padding: 15px 0; background: #f8f9ff; border-bottom: 1px solid #e2e6ff;">
         <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
             <ol style="list-style: none; display: flex; flex-wrap: wrap; gap: 10px; margin: 0; padding: 0; align-items: center;">
-                <li><a href="feedback.html" style="color: #4361ee; text-decoration: none; font-weight: 500; transition: color 0.3s;" onmouseover="this.style.color='#3a0ca3'" onmouseout="this.style.color='#4361ee'">Home</a></li>
+                <li><a href="index.html" style="color: #4361ee; text-decoration: none; font-weight: 500; transition: color 0.3s;" onmouseover="this.style.color='#3a0ca3'" onmouseout="this.style.color='#4361ee'">Home</a></li>
                 <li><span style="margin: 0 8px; color: #9ca3af;">|</span></li>
                 <li><a href="login.html" style="color: #56607a; font-weight: 500; text-decoration: none; transition: color 0.3s;" onmouseover="this.style.color='#4361ee'" onmouseout="this.style.color='#56607a'">Sign In</a></li>
                 <li><span style="margin: 0 8px; color: #9ca3af;">|</span></li>
@@ -179,9 +180,15 @@
         </div>
     </nav>
 
+<section class="hero" style="background: linear-gradient(135deg, var(--primary), var(--secondary)); color: #fff; padding: 50px 0 70px; text-align: center; margin-bottom: 50px;">
+    <div class="container">
+        <h1 style="font-size: 3rem; margin-bottom: 20px; font-weight: 700;">Background Style - Change Image Background Colors & Styles Online Free</h1>
+        <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto 30px; opacity: 0.95;">Edit image backgrounds with custom colors, styles, and patterns. Transform your photos with professional background styling tools.</p>
+    </div>
+</section>
+
 <main class="stage">
 <section class="panel">
-<h1>Background Style - Online Free Tool</h1>
 <h2>Upload File</h2>
 <div class="preview-frame">
 <canvas id="previewCanvas"></canvas>
@@ -2546,7 +2553,7 @@
   if (footerYearEl) footerYearEl.textContent = new Date().getFullYear();
   </script>
     
-<script src="js/auth.js" type="module">
+<script src="js/auth.js" type="module"></script>
 
     <footer>
         <div class="container footer-inner">
