Fix: Comprehensive backend/frontend fixes - LibreOffice path, error logging, Document AI validation, GCS error handling, CORS, debug logs

--- a/frontend/pdf-to-word.html
+++ b/frontend/pdf-to-word.html
@@ -795,7 +795,9 @@
                 }, 2000);
                 
             } catch (error) {
-                showStatus(error.message || 'Conversion failed. Please try again.', 'error');
+                const errorMsg = error.message || 'Conversion failed. Please try again.';
+                showStatus(`Server error: ${errorMsg} (check logs)`, 'error');
+                console.error('Conversion error:', error);
                 progressBar.style.display = 'none';
                 progressFill.style.width = '0%';
                 resultsSection.style.display = 'none';
